--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,11 +4,14 @@
       Mapas UEA/TJAM
     </ion-title>
     <ion-buttons end>
-      <button ion-button (click)="addMarker()"><ion-icon name="add"></ion-icon>Add Marker</button>
+      <button ion-button (click)="addMarker()">
+        <ion-icon name="add"></ion-icon>Add Marker</button>
     </ion-buttons>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <div #map id="map"></div> 
+<ion-content>
+  <div #map id="map"></div>
+  
+  
 </ion-content>
